--- a/main_page.html
+++ b/main_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <link rel="stylesheet" type="text/css" href="main_page.css">
+            <link rel="stylesheet" type="text/css" href="css/main_page.css">
             <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet">
