--- a/login.html
+++ b/login.html
@@ -39,6 +39,14 @@
                     <li><a class="facebook" href="#" onmouseover="fbhover();" onmouseout="fbunhover();">Login with Facebook <img class="fb2" src="images/fb2.svg"></a></li>
                 </ul>
             </div>
+            <div class="ship">
+                <!--<div class="shape5"></div>-->
+                <div class="shape1"></div>
+                <div class="shape2"></div>
+                <div class="shape3"></div>
+                <div class="shape4"></div>
+                
+            </div>
         </div>
     </body>
 </html>
