--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                 </ul>
             </div>
             <div class="ship">
-                <!--<div class="shape5"></div>-->
+                <div class="shape5"></div>
                 <div class="shape1"></div>
                 <div class="shape2"></div>
                 <div class="shape3"></div>
