--- a/index_updated.html
+++ b/index_updated.html
@@ -5,36 +5,9 @@
             <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet">
+            <script src="js/dropdown.js"></script>
 
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <script>
-                    function showElement(button,id1,id2) {
-                        var div1 = document.getElementById(id1);
-                        var div2 = document.getElementById(id2);
-                        var height1=getComputedStyle(div1).getPropertyValue("height");
-                        var height2=getComputedStyle(div2).getPropertyValue("height");
-                        
-                        if(height1 === '0px'){
-                            div1.style.height='50px';
-                            div1.style.marginTop='15px';
-                            button.value = 'hide';
-
-                            if(height2==='50px'){
-                                div2.style.height='0px';
-                                div2.style.marginTop='0px';
-                                button.value='show';
-                            }
-                        }
-                        else 
-                        {
-                            div1.style.height='0px';
-                            div1.style.marginTop='0px';
-                            button.value='show';
-                        }
-
-                    };
-                    
-            </script>
     </head>
 
     <body>
