added rules and controls

--- a/index_updated.html
+++ b/index_updated.html
@@ -36,14 +36,20 @@
                             <a class="sidebar-link" href="#popup1">
                             <li class="highscores hvr-bob">Highscores</li></a>                            
                             <div id="rules">
-                                    Some rules
-                                    <br>
-                                    Some other rules
+                                    - stay alive by avoiding enemy projectiles
+                                    <br><br>
+                                    - kill all enemies before they reach you
+                                    <br><br>
+                                    - kill special enemies for bonus score
                                 </div> 
                             <div id="controls">
-                                    Key1
+                                    🢀 - move left
                                     <br>
-                                    Key2
+                                    🢂 - move right
+                                    <br>
+                                    SPACE - fire
+                                    <br>
+                                    P - pause game
                             </div>  
                             <div id="popup1" class="overlay col1">
                             <div class="popup">
