updated navbar + colors

--- a/index_updated.html
+++ b/index_updated.html
@@ -11,9 +11,7 @@
     </head>
 
     <body>
-        <div class="navbar">
-        <div class="fii-invaders"> Fii Invaders</div>
-    </div>
+        <div class="navbar">Fii Invaders</div>
         <div class="container">
         <div class="col1">
             <div class="sidebar">
