--- a/index_updated.html
+++ b/index_updated.html
@@ -41,9 +41,9 @@
                                     - kill special enemies for bonus score
                                 </div> 
                             <div id="controls">
-                                    🢀 - move left
+                                    ◄ - move left
                                     <br>
-                                    🢂 - move right
+                                    ► - move right
                                     <br>
                                     SPACE - fire
                                     <br>
