--- a/index_updated.html
+++ b/index_updated.html
@@ -14,6 +14,7 @@
         <div class="navbar">Fii Invaders</div>
         <div class="container">
         <div class="col1">
+            <img class="invader1" src="images/invader1_blue">
             <div class="sidebar">
                    
                 <div class="menu"><img class="title" src="http://moziru.com/images/space-invaders-clipart-4.png"></div>
