changes to main page

--- a/index_updated.html
+++ b/index_updated.html
@@ -44,13 +44,13 @@
                                     - kill special enemies for bonus score
                                 </div> 
                             <div id="controls">
-                                    ◄ - move left
-                                    <br>
-                                    &#8658 - move right
-                                    <br>
+                                    ◄ &nbsp;&nbsp;&nbsp;&nbsp;- move left
+                                    <br><br>
+                                    ◄ &nbsp;&nbsp;&nbsp;&nbsp;- move right
+                                    <br><br>
                                     SPACE - fire
-                                    <br>
-                                    P - pause game
+                                    <br><br>
+                                    P &nbsp;&nbsp;&nbsp;&nbsp;- pause game
                             </div>  
                             <div id="popup1" class="overlay col1">
                             <div class="popup">
