updated description page

--- a/description.html
+++ b/description.html
@@ -10,8 +10,7 @@
     </head>
     <body>
     	<div class="navbar">
-        <div class="fii-invaders">
-        	<img src="images/fii.png"/>Invaders</div>
+        <div class="fii-invaders">Fii Invaders</div>
         </div>
         <div class="row">
         <div class="col-2">
