--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         </script>
     </head>
     <body>
-        <div class="navbar"> Fii Invaders</div>
+        <div class="navbar"> FII Invaders</div>
         <div class="col-1"> 
             <div class="aliens">
                 <img class="alien1" src="images/alien1.png" onmouseover="alien1hover();" onmouseout="alien1unhover();">
