Added link to description page

--- a/index_updated.html
+++ b/index_updated.html
@@ -35,7 +35,7 @@
                             </a>
                         
                             
-                            <a class="sidebar-link" href="#"><li class="desc hvr-bob">Description</li></a>
+                            <a class="sidebar-link" href="description.html"><li class="desc hvr-bob">Description</li></a>
                             <a class="sidebar-link" href="#popup1">
                             <li class="highscores hvr-bob">Highscores</li></a>                            
                             <div id="rules">
