Added contents to presentation

--- a/description.html
+++ b/description.html
@@ -52,8 +52,10 @@
             <h2>Presentation</h2>
             <a class="close" href="#">&times;</a>
             <div class="content">                               
-               <p>casfasfsa</p>
-               <p></p>
+               <p> This website is part of a project that aims to bring the wonderful game of Space Invaders to the "Alexandru Ioan Cuza" University. </p>
+    <p> This project was created by Vl&abreve;du&tcedil; Cojocariu, Sabina S&abreve;vescu and Andrei Arhip,
+        under the guidance of their professor Cosmin Varlan. </p>
+        <p> This project aims to recreate the legendary game of Space Invaders, but with a twist: the levels are inspired by the computer science building layout, the users will be able to connect using various social accounts, the bosses are professors and a whole lot more. </p>
             </div>
             </div>
             </div>
