Revert "updated description page"
This reverts commit dd9bdd9191e715748ebb78d971b461e9c4da4f1c.

--- a/description.html
+++ b/description.html
@@ -10,7 +10,8 @@
     </head>
     <body>
     	<div class="navbar">
-        <div class="fii-invaders">Fii Invaders</div>
+        <div class="fii-invaders">
+        	<img src="images/fii.png"/>Invaders</div>
         </div>
         <div class="row">
         <div class="col-2">
