--- a/description.html
+++ b/description.html
@@ -10,7 +10,7 @@
     </head>
     <body>
     	<div class="navbar">
-        <div class="fii-invaders">Fii Invaders</div>
+        <div class="fii-invaders">FII Invaders</div>
         </div>
         <div class="row">
         <div class="col-2">
