--- a/index_updated.html
+++ b/index_updated.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <div class="navbar">Fii Invaders
+        <div class="navbar">FII Invaders
             <img id="alien" src="images/for_navbar.png" onclick="move('alien','navbar')"></div>
         
         <div class="container">
