--- a/raport.html
+++ b/raport.html
@@ -14,6 +14,7 @@
 		<h1> </h1>
 		<h2>Idei si Concepte</h2>
 			<p>Avand un exemplu clar pe care sa-l urmam, nu a fost greu sa venim cu idei pentru design-ul paginii. Am optat pentru o interfata mai rarefiata, care sa-i permita utilizatorului sa se concentreze la joc, fara a-l priva de functionalitatile necesare.</p>
+			<p>In implementare, nava spatiala din jocul clasic va fi inlocuita de un profesor, iar invaderii de studenti furiosi. Acestia vor arunca cu diferite obiecte in profesor, care va trebui sa se fereasca si sa arunce la randul lui cu creta in studenti, obligandu-i sa iasa din amfiteatru.</p>
 		<h2>Interactiunea cu Utilizatorul</h2>
 			<p>Aplicatia va interactiona cu utilizatorul prin intermediul UI-ului oferit si a controalelor puse la dispozitie (disponibile in sectiunea "rules" de pe pagina jocului).</p>
 		<h2>Modelul datelor, API-uri externe, solutii de stocare</h2>
