--- a/login.html
+++ b/login.html
@@ -35,8 +35,8 @@
             <div class="container">
                 <div class="login">Login</div>
                 <ul class="logins">
-                    <li><a class="guest" href="#">Login as Guest</a></li>
-                    <li><a class="facebook" href="#" onmouseover="fbhover();" onmouseout="fbunhover();">Login with Facebook <img class="fb2" src="images/fb2.svg"></a></li>
+                    <li><a class="guest" href="index_updated.html">Login as Guest</a></li>
+                    <li><a class="facebook" href="index_updated.html" onmouseover="fbhover();" onmouseout="fbunhover();">Login with Facebook <img class="fb2" src="images/fb2.svg"></a></li>
                 </ul>
             </div>
             <div class="ship">
