fixed sidebar bug

--- a/index_updated.html
+++ b/index_updated.html
@@ -46,9 +46,9 @@
                                     - kill special enemies for bonus score
                                 </div> 
                             <div id="controls">
-                                    ◄ &nbsp;&nbsp;&nbsp;&nbsp;- move left
+                                    <i class="left"></i> &nbsp;&nbsp;&nbsp;&nbsp;- move left
                                     <br><br>
-                                    ◄ &nbsp;&nbsp;&nbsp;&nbsp;- move right
+                                    <i class=right></i> &nbsp;&nbsp;&nbsp;&nbsp;- move right
                                     <br><br>
                                     SPACE - fire
                                     <br><br>
