--- a/description.html
+++ b/description.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="css/test.css"/>
+  <link rel="stylesheet" type="text/css" href="css/description.css"/>
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
