--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
             <div class="container">
                 <div class="login">Login</div>
                 <ul class="logins">
-                    <li><a class="guest" href="index_updated.html">Login as Guest</a></li>
+                    <li><a class="guest" href="index.html">Login as Guest</a></li>
                     <li><a class="facebook" onmouseover="fbhover();" onmouseout="fbunhover();"onclick="checkLoginState()">Login with Facebook <img class="fb2" src="images/fb2.svg"></a></li>
                 </ul>
             </div>
