--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     </ul>
                     
             </div>
+            <img class="invader3" src="images/invader1_blue.png">
  </div>
 
         <div class="col2">
