--- a/description.html
+++ b/description.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="navbar">
-  <a href="index_updated.html"><img src="images/back.png"/ width="14" valign="center"></a>&nbsp;FII Invaders
+  <a href="index.html"><img src="images/back.png"/ width="14" valign="center"></a>&nbsp;FII Invaders
     <img id="alien" src="images/for_navbar.png" onclick="move('alien','navbar')">
 </div>
 <br/><br/>
@@ -30,11 +30,11 @@
         <table>
           <tr>
             <td>
-              <a href="index_updated.html"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0f/Space_Invaders_flyer%2C_1978.jpg/220px-Space_Invaders_flyer%2C_1978.jpg"/></a>
+              <a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0f/Space_Invaders_flyer%2C_1978.jpg/220px-Space_Invaders_flyer%2C_1978.jpg"/></a>
             </td>
             <td>&nbsp;&nbsp;</td>
             <td>
-            <p><a href="index_updated.html"><span>Space Invaders</span></a> is a Japanese shooting video game released in 1978 by Taito. It was developed by Tomohiro Nishikado, who was inspired by other media: Breakout, The War of the Worlds, and Star Wars. The games was one of the forerunners of modern video gaming and helped expand the video game industry from a novelty to a global industry.</p>
+            <p><a href="index.html"><span>Space Invaders</span></a> is a Japanese shooting video game released in 1978 by Taito. It was developed by Tomohiro Nishikado, who was inspired by other media: Breakout, The War of the Worlds, and Star Wars. The games was one of the forerunners of modern video gaming and helped expand the video game industry from a novelty to a global industry.</p>
             <p>The game Space Invaders became an immediate hit when it was released in 1978. In the original planning for the game, they had planned to have the aliens be human soldiers. Taito figured that they did not want to send the message that shooting humans was ok, so they changed it to aliens.</p>
             <p>Shortly after being released, Space Invaders grew in popularity. In 1980, it was licensed for use in the United States. It was released in coin-operated arcades, the Atari 2600, and the Nintendo Entertainment System. Throughout its lifetime it has generated more than 500 million dollars in revenue. </p>
             <p>For those who do not know what the game is like, it is a 2D shooter where a human must protect the earth from aliens. There are 48 aliens in each stage that are evenly spaced apart into 6 columns. The aliens move back and forth across the screen in a set pattern, slowly advancing toward earth. It is the job of the human player to shoot all of the aliens before they reach the earth. The aliens also fire randomly, so the human player must avoid getting shot by the aliens. If the human player is able to destroy all 48 of the aliens, then he or she advances to the next stage where they have a new set of 48 aliens to destroy. Another aspect of the game is the set of shields provided to the human player. In the game there are 3 shields which the human player can hide behind to prevent getting shot by the aliens. As these shields receive damage, they shots are allowed to penetrate through them. </p>
