--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             <img class="invader2" src="images/invader1_blue.png">
             <div class="canvasContainer"><canvas id="my-canvas">
             </canvas>
+            <canvas id="intro-canvas"></canvas>
+            <script src="js/intro.js"></script>
             <!--<script>            
             var canvas = document.getElementById("my-canvas");
             var ctx = canvas.getContext('2d');
