added game over screen

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
             <div class="canvasContainer"><canvas id="my-canvas">
             </canvas>
             <canvas id="intro-canvas"></canvas>
+            <canvas id="end-canvas"></canvas>
             <script src="js/intro.js"></script>
+            <script src="js/outro.js"></script>
             <!--<script>            
             var canvas = document.getElementById("my-canvas");
             var ctx = canvas.getContext('2d');
