--- a/description.html
+++ b/description.html
@@ -31,6 +31,7 @@
           <tr>
             <td>
               <a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0f/Space_Invaders_flyer%2C_1978.jpg/220px-Space_Invaders_flyer%2C_1978.jpg"/></a>
+              <!-- pune imaginea wrap cu textul-->
             </td>
             <td>&nbsp;&nbsp;</td>
             <td>
