--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <canvas id="intro-canvas"></canvas>
             <canvas id="end-canvas"></canvas>
             <script src="js/intro.js"></script>
+            <script src="js/demo_map.js"></script>
             <script src="js/outro.js"></script>
             <!--<script>            
             var canvas = document.getElementById("my-canvas");
