--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
             <script src="js/dropdown.js"></script>
             <script src="js/move_alien.js"></script>
             <script src="js/get_user_info.js"></script>
+            <script src="js/outro.js"></script>
+            <script src="js/intro.js"></script>
             <script src="js/game.js"></script>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
-    <body onload="initiateCanvas()">
+    <body onload="introCanvas()">
         <div class="navbar">FII Invaders
             <img id="alien" src="images/for_navbar.png" onclick="move('alien','navbar')"></div>
         
@@ -80,9 +82,8 @@
             </canvas>
             <canvas id="intro-canvas"></canvas>
             <canvas id="end-canvas"></canvas>
-            <script src="js/intro.js"></script>
             <script src="js/demo_map.js"></script>
-            <script src="js/outro.js"></script>
+            
             <!--<script>            
             var canvas = document.getElementById("my-canvas");
             var ctx = canvas.getContext('2d');
