--- a/description.html
+++ b/description.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <script src="js/move_alien.js"></script> 
+  <script src="js/move_alien.js"></script>   
 </head>
 <body>
 <div class="navbar">
@@ -78,12 +78,54 @@
   </section>
     
   <section id="content3">
-    <p>
-      Bacon ipsum dolor sit amet beef venison beef ribs kielbasa. Sausage pig leberkas, t-bone sirloin shoulder bresaola. Frankfurter rump porchetta ham. Pork belly prosciutto brisket meatloaf short ribs.
-    </p>
-    <p>
-      Brisket meatball turkey short loin boudin leberkas meatloaf chuck andouille pork loin pastrami spare ribs pancetta rump. Frankfurter corned beef beef tenderloin short loin meatloaf swine ground round venison.
-    </p>
+    <table>
+      <tr>
+        <td colspan="4">
+        <p>
+        To get a deeper understanding of how this project was created, visit the <a href="raport.html"><span>Scholarly HTML Report</span></a>.
+        </p>
+      </td>
+      </tr>
+      <tr>
+        <td colspan="4"><h2>Check our awesome photos and contents.</h2></td>
+      </tr>
+    <tr>
+      <td width=20%>
+        <a href="#openModal1"><img src="images/varlan.png"></a>
+        <div id="openModal1" class="modalDialog">
+          <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <img src="images/varlan.png" width="100%">
+          </div>
+        </div>
+      </td>
+      <td width=20%>
+        <a href="#openModal2"><img src="images/iftene.png"></a>
+        <div id="openModal2" class="modalDialog">
+          <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <img src="images/iftene.png" width="100%">
+          </div>
+        </div>
+      </td>
+      <td width=20%>
+        <a href="#openModal3"><img src="images/buraga.png"></a>
+        <div id="openModal3" class="modalDialog">
+          <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <img src="images/buraga.png" width="100%">
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr><td colspan="4">&nbsp;</td></tr>
+    <tr>
+        <td colspan="4"><p align="center">Listen the gaudeamus song track over here: <a href="https://www.youtube.com/watch?v=FkYI7NSMMT0"><span>Gaudeamus Igitur</span></a>.</p></td>
+      </tr>
+    <tr>
+        <td colspan="4"><h2>Thank you for your attention.</h2></td>
+      </tr>
+    </table>
   </section>
     
 </main>
