--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
                             <div class="popup">
                             <h2>HighScores</h2>
                             <a class="close" href="#">&times;</a>
-                            <div class="content">                               
-                               1. First Player -- infinite<br/>
-                               2. Second Player -- below infinite<br/>
-                               3. Third Player --- 99999999<br/>
+                            <div class="content" id="result">
                             </div>
                             </div>
                             </div>                                  
