--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         <div class="col2">
                 
             <img class="invader2" src="images/invader1_blue.png">
+            <!--<embed src="gaudeamus.mp3" hidden="true">  -->
+            <audio id="audio" src="gaudeamus.mp3" hidden="true"></audio>
             <div class="canvasContainer"><canvas id="my-canvas">
             </canvas>
             <canvas id="intro-canvas"></canvas>
