added sound effects

--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
             <img class="invader2" src="images/invader1_blue.png">
             <!--<embed src="gaudeamus.mp3" hidden="true">  -->
             <audio id="audio" src="gaudeamus.mp3" hidden="true"></audio>
+            <audio id="teacherLaser" src="laser.wav" hidden="true"></audio>
+            <audio id="studentLaser" src="laser2.wav" hidden="true"></audio>
+            <audio id="gameOver" src="gameOver.wav" hidden="true"></audio>
+            <audio id="specialStudent" src="specialStudent.wav" hidden="true"></audio>
+            <audio id="death1" src="death1.wav" hidden="true"></audio>
+            <audio id="death2" src="death2.wav" hidden="true"></audio>
+            <audio id="death3" src="death3.wav" hidden="true"></audio>
+            <audio id="specialDeath" src="specialDeath.wav" hidden="true"></audio>
+            <audio id="changeLevel" src="changeLevel.mp3" hidden="true"></audio>
             <div class="canvasContainer"><canvas id="my-canvas">
             </canvas>
             <canvas id="intro-canvas"></canvas>
